tier3/kubernetes/ingress/sarge-tier3-gateway-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "sarge-tier3-gateway-ingress"
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # external-dns.alpha.kubernetes.io/hostname: sarge-tier3.apperdevops.com
  labels:
    app: sarge-tier3-gateway-ingress
spec:
  # Offload TLS termination to cloudfront
  # tls:
  # - hosts:
    # - sarge-tier3.apperdevops.com
  rules:
  - host: sarge-tier3.apperdevops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sarge-express-miniapp
            port:
              number: 8080
